[gd_scene load_steps=21 format=3 uid="uid://ctaqwt13pd2em"]

[ext_resource type="Script" uid="uid://bcdweew2fnney" path="res://script/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://dnr77ecvrrfl0" path="res://assets/Enemy/Walk.png" id="2_4ra3w"]
[ext_resource type="Texture2D" uid="uid://c6da080dsnrd3" path="res://assets/Enemy/Death.png" id="2_mpr68"]
[ext_resource type="PackedScene" uid="uid://dh5syx86yqtgu" path="res://scenes/Deathzone.tscn" id="4_ft8do"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ft8do"]
atlas = ExtResource("2_mpr68")
region = Rect2(112, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wwv6"]
atlas = ExtResource("2_mpr68")
region = Rect2(224, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vja8"]
atlas = ExtResource("2_mpr68")
region = Rect2(336, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwav8"]
atlas = ExtResource("2_mpr68")
region = Rect2(448, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i2q2"]
atlas = ExtResource("2_mpr68")
region = Rect2(560, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly5gv"]
atlas = ExtResource("2_mpr68")
region = Rect2(672, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_82o86"]
atlas = ExtResource("2_mpr68")
region = Rect2(784, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gqeq"]
atlas = ExtResource("2_mpr68")
region = Rect2(896, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyqm"]
atlas = ExtResource("2_4ra3w")
region = Rect2(0, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("2_4ra3w")
region = Rect2(112, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("2_4ra3w")
region = Rect2(224, 0, 112, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("2_4ra3w")
region = Rect2(336, 0, 112, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yqyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft8do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wwv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vja8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwav8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i2q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly5gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82o86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gqeq")
}],
"loop": false,
"name": &"death",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ft8do"]
size = Vector2(39, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wwv6"]
size = Vector2(62, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55jtl"]
size = Vector2(56, 7)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_md0e3")

[node name="Pivot" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(-1, -48)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3yqyl")
animation = &"walk"
autoplay = "walk"

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -27)
target_position = Vector2(-56, 0)
collision_mask = 4

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, -27)
target_position = Vector2(-64, 38)
collision_mask = 4
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -26)
shape = SubResource("RectangleShape2D_ft8do")

[node name="Deathzone" parent="." instance=ExtResource("4_ft8do")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(2, -26)
shape = SubResource("RectangleShape2D_5wwv6")
debug_color = Color(0.948849, 3.08037e-06, 0.576337, 0.42)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, -55)
shape = SubResource("RectangleShape2D_55jtl")
debug_color = Color(0.995593, 0, 0.202482, 0.42)

[connection signal="animation_finished" from="Pivot/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
